Set background, added clubs, listener, spacings

--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html>
-
     <head>
-        <title>Match Memory Game!</title>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Memory Match Game</title>
         <link rel="stylesheet" href="./style.css">
     </head>
 
     <body>
+        <div id="game_board" class="container">
+            <h1>Match Game Challenge</h1>
+
+
+        </div>
+
+        <script src="game.js"></script>
     </body>
 </html>
