Add flex box styling
Game board spreads cards out using flex with margin between.

--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
     </head>
 
     <body>
-        <div id="game_board" class="container">
+        <div id="game_board" class="game_board_container">
+
             <h1>Match Game Challenge</h1>
 
+            <div id="card_group" class="card_group_container">
 
-        </div>
 
-        <script src="game.js"></script>
-    </body>
-</html>
+            </div>
+
+            <script src="game.js"></script>
+        </body>
+    </html>
