Game board adjustments

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
                     Cards</button>
                 <button class="deal_cards_button" onclick="resetCards()">Reset
                     Game</button>
-
+                <h2 class="timer_class">&nbspTimer:</h2>
+                <h2 class="game_clock_class" id="on_page_timer">0:00</h2>
             </div>
 
             <div id="options_panel" class="options_panel_container">
