Add transparency to matched cards, color styling

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <option value=50>50 Cards</option>
                 </select>
                 <h2 id="status_bar" class="status_bar_class">Select your cards &
-                    Deal</h2>
+                    click on Deal Cards</h2>
             </div>
             <div id="card_group" class="card_group_container"></div>
 
